# definy

./: .env  .eslintrc.json  .gitignore  .metadata  Cargo.toml  Dockerfile  Dockerfile.flyio-deploy  LICENSE  README.md  analysis_options.yaml  browserClient.json  build.ts  client.ts  clientScriptHash.ts  copyDataElm.js  creativeRecordsClientStart.js  data.ts  dataTs.ts  databaseMigration.ts  databaseSetup.ts  debugInLocal.js  debugInLocal.ts  definyVSCodeExtension.md  deno.json  dist.json  elm.json  firebase.json  fly.toml  for-deno.code-workspace  format.ps1  gen.ts  globals.css  index.html  initialize.json  localDat.ts  localData.ts  main.js  moduleTree.md  next.config.js  note.md  (+21 more)
.devcontainer/: devcontainer.json
.storybook/: decorators.tsx  main.js
__snapshots__/: test.ts.snap
app/: App.ts  location.ts
charDatabase/: about.md
client/: App.tsx  AppN.tsx  CreateAccountDialog.tsx  Dialog.tsx  SigInDialog.tsx  SignUpDialog.tsx  api.ts  app.ts  app.tsx  definyType.ts  diff.md  header.ts  indexedDB.ts  key.ts  key_test.ts  main.ts  main.tsx  maybeEditor.ts  memberListEditor.ts  messageAndState.ts  page.ts  patternListEditor.ts  propCompare.ts  render.ts  start.tsx  tagEditor.ts  typeEditor.ts  typeParameterEditor.ts  typePartBodyEditor.ts  typePartEditor.ts  ui.ts  url.ts  vdom.ts
common/: apiCodec.ts  event.ts  globalStyle.ts  key_test.ts  main.ts  objectEntriesSameValue.ts  searchText.ts  signedEvent_test.ts  typedJson.ts  url.ts  util.ts  zodType.ts
components/: AccountCard.tsx  Editor.tsx  Header.tsx  Image.tsx  Link.tsx  LoadingBox.tsx  LogInMessage.tsx  ProjectCard.tsx  SoundQuiz.tsx  Text.tsx  WithHeader.tsx
core/: TypePartIdAndMessage.ts  data.ts  dict.ts  elm.ts  evaluation.ts  main.ts  newOut.ts  test.ts  toDebugString.ts  typeAlias.ts  util.ts  validation.ts  variable.ts
definy-build/: Cargo.toml  README.md
definy-client/: Cargo.toml
definy-client/src/: fetch.rs  keyboard_nav.rs  lib.rs  main.rs
definy-event/: Cargo.toml
definy-event/src/: cbor_datetime_tag1.rs  event.rs  event_hash_id.rs  lib.rs  response.rs  signed_event.rs
definy-input/: code.definy  lib.definy  mimeType.definy
definy-root/: code.definy  definy-output.txt  lib.definy
definy-server/: Cargo.toml
definy-server/src/: db.rs  event.rs  init_db.rs  main.rs
definy-ui/: Cargo.toml  README.md  main.css
definy-ui/src/: account_detail.rs  account_list.rs  app_state.rs  create_account_dialog.rs  dom.rs  dropdown.rs  event_detail.rs  event_filter.rs  event_list.rs  event_presenter.rs  expression_editor.rs  expression_eval.rs  fetch.rs  hash_format.rs  header.rs  i18n.rs  indexed_db.rs  language.rs  layout.rs  lib.rs  local_event.rs  local_event_queue.rs  login_or_create_account_dialog.rs  message.rs  module_detail.rs  module_list.rs  module_projection.rs  navigator_credential.rs  not_found.rs  page_title.rs  part_detail.rs  part_list.rs  part_projection.rs  query.rs  wasm_emitter.rs
definy-ui/tests/: browser_e2e.rs
deno-lib/: README.md  build.ts  collectTsOrTsxFilePath.ts  coreMain.ts  css.ts  deno.json  deps.ts  faunaInterface.ts  lazy.ts  lock.json  mod.ts  node.ts  nodeRedBuild.ts  nodeType.ts  prettier.ts  reactToStringTest.tsx  searchText.ts  sha256.ts  staticResource.ts  typedFauna.ts  typedJson.ts  util.test.ts  util.ts  writeFileAndLog.ts  zodType.ts
deno-library-check/: cloudstorage.ts  fauna.ts  s3.ts
desktop/: Cargo.toml
desktop-deno/: README.md  main.ts
desktop-proxy/: README.md  buildNpm.ts  definyRpc.ts  definyRpcExample.ts  doc.ts  main.ts  type.ts
desktop/src/: main.rs
docs/: api-server.md  build.md  database.md  dynamic-layout.md  file-server.md  key.md  server.md  ui-server.md  ui.md
elm/: elm.json
event/: cose.ts  cose_test.ts  event.ts  key.ts  key_test.ts  main.ts  main_test.ts  signedEvent.ts  signedEvent_test.ts
functions/: cloudstorage-interface.ts  database.ts  databaseLow.ts  environmentVariables.ts  faunadb-interface.ts  firestoreType.ts  functions-build.ts  html.ts  image.ts  index.ts  lib.ts  logInCallback.ts  login.ts  main.ts  object-storage-interface.ts  schema.ts  tool.ts  tsconfig.json  type.ts  typedFauna.ts  uuid.ts
functions_root/: package-lock.json  package.json  tsconfig.json
hooks/: useAccountToken.ts  useLanguage.ts  useQueryBasedState.ts
hosting/: index.html  robots.txt
hosting_root/: auth.js  auth.ts  index.html  main.js  package-lock.json  style.css  tsconfig.json
lib/: app.dart  codegen.dart  codegen_api.dart  env.dart  localization.dart  main.dart  setup_web.dart
local-server/: doc.md  main.ts
lsp/: definy.ts  extension.ts  main.ts  package-lock.json  package.json  tsconfig.json
lsp-test/: code.definy
narumincho-creative-record/: app.ts  build.ts  client.ts  distributionPath.ts  location.ts  main.ts  origin.ts  resourceUrl.ts  start.ts  svgImage.ts  top.ts  viewOut.ts
narumincho-vdom/: Cargo.toml  README.md
narumincho-vdom-client/: Cargo.toml  README.md
narumincho-vdom-client/src/: diff.rs  lib.rs
next/: next.config.js  tsconfig.json
nodeRedPackage/: README.md  index.html  main.js  package-lock.json  package.json  send-to-definy.html  send-to-definy.js  send-to-definy.ts  tsconfig.json
nodeRedPackageClient/: build.ts  content.tsx  deno.json  nodeRed.d.ts  send-to-definy.html  server.ts
pages/: _app.tsx  about.tsx  create-account.tsx  create-project.tsx  dev.tsx  editor.tsx  index.tsx  local-project.tsx  setting.tsx  tool.tsx
schema/: main.ts  start.js  tsconfig.json
script/: build.ts  buildClient.ts  debugInLocal.ps1  deploy.ps1  deployFunctions.ps1  deployHosting.ps1  startInDenoDeploy.ts  typeCheck.ts  vdom.ts
server/: Cargo.toml  context.ts  database.ts  error.ts  kv.ts  location.ts  location_test.ts  main.ts  main.tsx  schema.ts  startInDenoDeploy.ts
source/: About.tsx  App.ts  App.tsx  AppWithState.ts  CreateProject.tsx  Debug.tsx  Header.tsx  Home.tsx  Link.ts  Project.tsx  SidePanel.tsx  User.tsx  api.ts  app.ts  app.tsx  appInterface.ts  appWithState.ts  button.ts  data.ts  gitHubIcon.ts  header.ts  home.ts  icon.ts  image.ts  index.html  indexedDB.ts  link.ts  main.ts  (+45 more)
(+1114 files in other folders)
