[package]
name = "definy-client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.83"
wasm-bindgen = "0.2.106"
web-sys = { version = "0.3.83", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "Node",
  "NodeList",
  "HtmlElement",
  "Event",
] }
definy-ui = { path = "../definy-ui" }
narumincho-vdom-client = { path = "../narumincho-vdom-client" }
narumincho-vdom = { path = "../narumincho-vdom" }
