[package]
name = "definy-event"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_cbor = { version = "0.11.2", features = ["std", "tags"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
anyhow = "1.0.100"
rand = "0.8.5"
