[package]
name = "definy-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
narumincho-vdom = { path = "../narumincho-vdom" }
base64 = "0.22"
ed25519-dalek = { version = "2.2" }
definy-event = { path = "../definy-event" }
web-sys = { version = "0.3.85", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "Node",
  "NodeList",
  "HtmlElement",
  "Event",
  "HtmlDialogElement",
  "HtmlInputElement",
  "Navigator",
  "Clipboard",
  "Request",
  "RequestInit",
  "Response",
  "Headers",
  "CredentialsContainer",
  "CredentialRequestOptions",
] }
wasm-bindgen = "0.2.108"
rand = "0.8.5"
wasm-bindgen-futures = "0.4.58"
js-sys = "0.3.76"
anyhow = "1.0.100"
chrono = { version = "0.4.43", features = ["serde"] }
serde_cbor = { version = "0.11.2", features = ["std", "tags"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"

[dev-dependencies]
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "http1"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "sync"] }
