[package]
name = "definy-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
narumincho-vdom = { path = "../narumincho-vdom" }
base64 = "0.22"
ed25519-dalek = { version = "2.2" }
definy-event = { path = "../definy-event" }
web-sys = { version = "0.3.91", features = [
  "console",
  "Window",
  "History",
  "Document",
  "Element",
  "Node",
  "NodeList",
  "HtmlElement",
  "Event",
  "HtmlDialogElement",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "Navigator",
  "Clipboard",
  "DomStringList",
  "IdbDatabase",
  "IdbFactory",
  "IdbObjectStore",
  "IdbOpenDbRequest",
  "IdbRequest",
  "IdbTransaction",
  "IdbTransactionMode",
  "IdbVersionChangeEvent",
  "Request",
  "RequestInit",
  "Response",
  "Headers",
  "CredentialsContainer",
  "CredentialRequestOptions",
] }
wasm-bindgen = "0.2.114"
rand = "0.8.5"
wasm-bindgen-futures = "0.4.64"
js-sys = "0.3.91"
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
serde_cbor = { version = "0.11.2", features = ["std", "tags"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_urlencoded = "0.7"
sha2 = "0.10.9"

[dev-dependencies]
hyper = { version = "1.8", features = ["http1", "server"] }
hyper-util = { version = "0.1.20", features = ["client-legacy", "http1"] }
http-body-util = "0.1.3"
tokio = { version = "1.50", features = ["macros", "rt-multi-thread", "net", "time"] }
serde_json = "1.0.149"
