[package]
name = "definy-desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.0", features = ["full"] }
hyper = { version = "0.14.20", features = ["full"] }
http = "0.2.8"
rand = "0.8.5"
url = "2.2.2"
