[package]
name = "narumincho-vdom-client"
version = "0.1.0"
edition = "2024"

[dependencies]
narumincho-vdom = { path = "../narumincho-vdom" }
js-sys = "0.3.83"
wasm-bindgen = "0.2.106"
web-sys = { version = "0.3.83", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "Node",
  "NodeList",
  "HtmlElement",
  "Text",
  "EventTarget",
] }
